# calendar-notifications

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy-pypi.yml  latest-changes.yml
calendar_notifications/: __init__.py  cn_configuration.py  main.py
calendar_notifications/handle_event_start/: __init__.py  abstract_event_start_handler.py  zoom_meeting_handler.py
