[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "calendar-notifications"
authors = [{name = "Jorrick Sleijster", email = "jorricks3@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Environment :: MacOS X",
    "Environment :: MacOS X :: Aqua",
    "Environment :: MacOS X :: Carbon",
    "Environment :: MacOS X :: Cocoa",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",

]
dynamic = ["version", "description"]
requires-python = ">=3.8"
dependencies = [
    "ical-library>=0.0.1a1",
    "macos-notifications>=0.1.2",
]

[project.scripts]
start_calendar_notifications = "calendar_notifications.main:main"

[project.optional-dependencies]
test = [
    "flake8 >=4.0.0,<5.0.0",
    "black >= 22.6.0,<23.0.0",
    "isort >=5.10.1,<6.0.0",
    "mypy ==0.910",
]
dev = [
    "pre-commit >=2.19.0,<3.0.0",
]


[project.urls]
Home = "https://github.com/Jorricks/calendar-notifications"
Documentation = "https://github.com/Jorricks/calendar-notifications"
Source = "https://github.com/Jorricks/calendar-notifications"
PullRequests = "https://github.com/Jorricks/calendar-notifications/pulls"
Issues = "https://github.com/Jorricks/calendar-notifications/issues"

[tool.flit.module]
name = "calendar_notifications"

[tool.black]
line-length=120
target-version=['py38']

[tool.isort]
line_length = 120
multi_line_output = 3
force_alphabetical_sort_within_sections = "True"
force_sort_within_sections = "False"
known_macnotify = ["mac_notifications"]
sections=["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER", "MACNOTIFY"]
profile = "black"
add_imports = ["from __future__ import annotations"]

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = "True"
scripts_are_modules = "True"
